src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <description>Display status for either Task (status) or Event (Event Status)</description>
        <formula>IF(ISBLANK(TEXT(Status)),TEXT(Event_Status__c),TEXT(Status))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advice_sheets__c</fullName>
        <description>Advice sheets required</description>
        <label>Advice sheets</label>
        <picklist>
            <picklistValues>
                <fullName>Aggressive behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers care for self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explain to child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feeling of guilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grief bereavement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconitinence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keeping active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living alone</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Availability_Status__c</fullName>
        <label>Availability Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Call Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <description>Used for CRS Information Provision Calls to indicate how the caller&apos;s query was handled.</description>
        <label>Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Information provided verbally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information provided by post/email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Society Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caller_type__c</fullName>
        <label>Caller type</label>
        <picklist>
            <picklistValues>
                <fullName>Person with Dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worried about memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Task__c</fullName>
        <description>The actual date on which the task was completed.</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuous_Consent_Details__c</fullName>
        <label>Continuous Consent Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventNumber__c</fullName>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>EventNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Worker Availability to be confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service User Availability to be confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by Service User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by Third party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be reassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be rescheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Out__c</fullName>
        <label>In/Out</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Provided__c</fullName>
        <description>Used to track which information was provided to the client via this activity.</description>
        <label>Information Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Diagnosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signpost to Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Information_sheets__c</fullName>
        <label>Information sheets</label>
        <picklist>
            <controllingField>Format__c</controllingField>
            <picklistValues>
                <fullName>Adaptations to home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After a diagnosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDS related cognitive impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminium Alzheimer&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s What is?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Am I at risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brain behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more fields to be added later</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Location_Type_Event__c</fullName>
        <description>The location of the Event, those with &apos;Other&apos; selected also require an entry in &apos;Location&apos;.</description>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service User Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink (&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot; &amp; Street__c  &amp; &quot; &quot; &amp; &quot; &quot; &amp; City__c &amp; &quot; &quot; &amp; Postcode__c &amp; &quot;&amp;ie=UTF8&amp;om=0 &quot;, IMAGE( &quot;/resource/GoogleMaps&quot;, &quot;GoogleMaps&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Members_of_the_Public_BME__c</fullName>
        <label>Members of the Public (BME)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_of_the_Public_General__c</fullName>
        <label>Members of the Public (General)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_of_the_Public_LGBT__c</fullName>
        <label>Members of the Public (LGBT)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Friends_Family_Involved_Event__c</fullName>
        <description>The number of friends and family members of the service user directly involved in the event.</description>
        <label>No. Service User Friends/Family Involved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Professionals_Involved_Event__c</fullName>
        <description>The number of professionals involved in the event (excluding Society staff and volunteers).</description>
        <label>No. of Professionals Involved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Staff_Involved_Event__c</fullName>
        <description>The number of Alzheimers Society staff involved in the event.</description>
        <label>No. of Staff Involved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Volunteers_Involved_Event__c</fullName>
        <description>The number of Alzheimers Society volunteers involved in the event.</description>
        <label>No. of Volunteers Involved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Training_Days__c</fullName>
        <label>No. of Training Days</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Carer_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Carer Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Person_with_Dementia_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Person with Dementia Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteer_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Volunteer Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Worker_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Worker Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Caller_type__c</fullName>
        <label>Other Caller type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Information_Provided__c</fullName>
        <label>Other Information Provided</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Unknown__c</fullName>
        <label>Other/Unknown</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_publications__c</fullName>
        <label>Other publications</label>
        <picklist>
            <picklistValues>
                <fullName>Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWD 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWD 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWD 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Making a will</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Places_Available__c</fullName>
        <description>Places Available for Group Event</description>
        <label>Places Available</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode_Constituency__c</fullName>
        <description>Used on Record Types PWD and Carer to hold the Constituency derived from Postcode lookup.</description>
        <label>Postcode Constituency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Local_Authority__c</fullName>
        <description>Local authority derived from postcode using Postcode Anywhere automation.</description>
        <label>Postcode Local Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Primary_Care_Trust__c</fullName>
        <description>Primary care trust derived from Postcode using Postcode Anywhere&apos;s Integration.</description>
        <label>Postcode Primary Care Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Sector__c</fullName>
        <inlineHelpText>Enter the Postcode District (part before space) and the number after the space.</inlineHelpText>
        <label>Postcode Sector</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Ward__c</fullName>
        <description>Ward derived from Postcode using Postcode Anywhere integration</description>
        <label>Postcode Ward</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Service_User_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate whether the primary service user is directly involved in the activity.</description>
        <label>Primary Service User Involved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professionals__c</fullName>
        <label>Professionals</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Outcomes__c</fullName>
        <inlineHelpText>This refers to the Outcome No on Support plan of the Service Usage</inlineHelpText>
        <label>Outcome No(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Time_Minutes__c</fullName>
        <description>The staff effort dedicated to the activity (in minutes).</description>
        <label>Staff Time (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_of_call__c</fullName>
        <label>Time of call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Attendees_ByType__c</fullName>
        <formula>BLANKVALUE(TEXT(Number_of_Person_with_Dementia_Attendees__c),&apos;0&apos;)
&amp; &quot;/ &quot; &amp;BLANKVALUE(TEXT(Number_of_Carer_Attendees__c),&apos;0&apos;)
&amp; &quot;/ &quot; &amp; BLANKVALUE(TEXT(Number_of_Worker_Attendees__c),&apos;0&apos;)
&amp; &quot;/ &quot; &amp; BLANKVALUE(TEXT(Number_of_Volunteer_Attendees__c),&apos;0&apos;)</formula>
        <inlineHelpText>Number of people recorded as attending this event</inlineHelpText>
        <label>P/C/W/V Attnd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Attendees__c</fullName>
        <formula>Number_of_Person_with_Dementia_Attendees__c +  Number_of_Carer_Attendees__c +  Number_of_Worker_Attendees__c + Number_of_Volunteer_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Allocated_to__c</fullName>
        <label>Training Allocated to</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Trainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please fill out this text area with the training location address</inlineHelpText>
        <label>Training Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Time_Minutes__c</fullName>
        <label>Travel Time (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Time_Minutes__c</fullName>
        <description>The volunteer effort dedicated to the activity (in minutes).</description>
        <label>Volunteer Time (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>Advice_sheets__c</columns>
        <columns>Information_sheets__c</columns>
        <columns>Other_publications__c</columns>
        <columns>Time_of_call__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.RECORDTYPE</columns>
        <columns>TASK.CLOSED</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Site_s_Completed_Tasks</fullName>
        <booleanFilter>1 AND (2 or 4) AND 3</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>startsWith</operation>
            <value>DA</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Withdrawn</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>startsWith</operation>
            <value>Dementia Adviser &amp; Dementia Support</value>
        </filters>
        <label>My Site&apos;s Completed  Tasks</label>
        <sharedTo>
            <group>Dementia_Adviser_Dementia_Support_Loca</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Site_s_Open_Tasks</fullName>
        <booleanFilter>1 AND ( 2  or 4) AND 3</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>startsWith</operation>
            <value>DA</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Withdrawn</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>startsWith</operation>
            <value>Dementia Adviser &amp; Dementia Support</value>
        </filters>
        <label>My Site&apos;s Open  Tasks</label>
        <sharedTo>
            <group>Dementia_Adviser_Dementia_Support_Loca</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Site_s_Tasks</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>startsWith</operation>
            <value>DA</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>startsWith</operation>
            <value>Dementia Adviser &amp; Dementia Support</value>
        </filters>
        <label>My Site&apos;s Tasks</label>
        <sharedTo>
            <group>Dementia_Adviser_Dementia_Support_Loca</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>